hphp/hack/test/typecheck/poly_method_explicit_type_arguments_error.php.exp
File "poly_method_explicit_type_arguments_error.php", line 24, characters 5-54:
Invalid argument (Typing[4110])
File "poly_method_explicit_type_arguments_error.php", line 24, characters 14-16:
Expected int
File "poly_method_explicit_type_arguments_error.php", line 23, characters 25-30:
But got string
File "poly_method_explicit_type_arguments_error.php", line 14, characters 15-16:
  via this generic T1
